--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -230,6 +230,10 @@
 	-webkit-box-shadow: none !important;
 	-mox-box-shadow: none !important;
 	box-shadow: none !important;
+	transition: none;
+	-moz-transition: none;
+	-webkit-transition: none;
+	-o-transition: none;
 }
 
 .accordion-slider a {
