updated public assets

--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -226,7 +226,9 @@
 .accordion-slider .as-background,
 .accordion-slider .as-background-opened {
 	border: none !important;
-	border-radius: none !important;
+	border-radius: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
 	-webkit-box-shadow: none !important;
 	-mox-box-shadow: none !important;
 	box-shadow: none !important;
