--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -225,6 +225,8 @@
 
 .accordion-slider .as-background,
 .accordion-slider .as-background-opened {
+	max-width: none !important;
+	max-height: none !important;
 	border: none !important;
 	border-radius: 0 !important;
 	margin: 0 !important;
@@ -246,8 +248,6 @@
 	-o-transition: none !important;
 }
 
-.accordion-slider .as-background,
-.accordion-slider .as-background-opened,
 .accordion-slider iframe,
 .accordion-slider object,
 .accordion-slider video,
