--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -18,6 +18,7 @@ Single accordion page
 ----------------------------------------------------------------------*/
 .accordion-slider-admin #titlediv {
 	margin-right: 2%;
+	margin-bottom: 10px;
 }
 
 .accordion-slider-admin .metabox-holder {
@@ -1252,6 +1253,30 @@ Single accordion page
 
 .video-tutorials-list li {
 	margin-bottom: 10px;
+}
+
+.image-size-warning {
+	display: none;
+	padding: 10px;
+	margin: 0 2% 10px 0;
+	background-color: #FFF;
+	color: #333;
+	border-left: 4px solid #FFE000;
+	-moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.image-size-warning p {
+	margin-top: 0;
+}
+
+.image-size-warning-close {
+	font-weight: bold;
+	text-decoration: none;
 }
 
 .sidebar-panel-info {
