make the viewport of the layers editor scrollable

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -629,10 +629,12 @@ Single accordion page
 /* Layers editor
 --------------------------------------------------*/
 .layers-editor .modal-window {
-	min-width: 625px;
+	min-width: 685px;
+	max-width: 95%;
+	box-sizing: border-box;
 }
 
-@media (max-width: 625px) {
+@media (max-width: 685px) {
 	.layers-editor:before {
 		display: none;
 	}
@@ -924,8 +926,8 @@ Single accordion page
 -----------------*/
 .layer-viewport {
 	position: relative;
-	width: 100%;
-	overflow: hidden;
+	max-width: 100%;
+	overflow: auto;
 	background-image:
 	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%),
 	    -moz-linear-gradient(45deg, #EEE 25%, transparent 25%,transparent 75%, #EEE 75%, #EEE 100%);
