--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -452,6 +452,10 @@ Single accordion page
 	margin-left: 10px;
 }
 
+.fancybox-overlay {
+	z-index: 11000 !important;
+}
+
 /* Import/Export window
 --------------------------------------------------*/
 @media (max-width: 560px) {
