--- a/documentation/assets/css/style.css
+++ b/documentation/assets/css/style.css
@@ -2,7 +2,7 @@ html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-
 
 body{
   color:#444;
-  font-family: 'Open Sans', Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman',
+  font-family: Arial, 'Open Sans', Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman',
               "Hiragino Sans GB", "STXihei", "微软雅黑", serif;
   font-size:12px;
   line-height:1.5em;
