--- a/admin/assets/css/accordion-slider-add-ons.css
+++ b/admin/assets/css/accordion-slider-add-ons.css
@@ -11,8 +11,13 @@ Add-ons page
 }
 
 .plugin-card .desc,
+.plugin-card .desc > p,
 .plugin-card .name {
 	margin-right: 0 !important;
+}
+
+.plugin-card .more-details {
+	margin-left: 148px;
 }
 
 .plugin-icon {
@@ -61,6 +66,10 @@ Add-ons page
 .license-key-input {
     min-width: 300px;
     margin-right: 10px;
+	padding: 0 8px !important;
+    line-height: 2 !important;
+	font-size: 14px !important;
+    min-height: 30px !important;
 }
 
 .license-key-input::placeholder {
